tests/NormalTests/paczka1/fuzzy1/85564228.err
Error in line 2: 28b6 A4 91,8
Error in line 12: 28b6 A440 73,99
Error in line 11: 6D8toayU5 A440 92,1
Error in line 27: S669 S669 1%,5
Error in line 9: 65uxAy S669 62,0
Error in line 37: 28b6 A440 157,0
